--- a/experiences.html
+++ b/experiences.html
@@ -58,6 +58,26 @@
     </header>
     <main class="row">
         <section class="col-12 col-sm-12 experience">
+
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
+                <h4 class="col-12 col-sm-12 e-titles">Undergraduate Researcher</h4>
+                <h5 class="col-12 col-sm-12 e-co">Dr. Stephen Rogers' Lab - UNC Chapel Hill Biology Department</h5>
+                <p class="col-12 col-sm-12 e-time"><i>January 2022 - Present</i></p>
+                <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
+                <ul clas="col-12 col-sm-12">
+                    <li class="col-12 col-sm-12">Reads and critiques published scientific literature regarding the effects of various drug treatments on acetylated and de-acetylated microtubules, assessing the interactions of mitochondria with dynamic instability in <i>D. melanogaster</i></li>
+                    <li class="col-12 col-sm-12">Generated next-step hypotheses and means to test those hypotheses from information gathered from previously conducted experiments</li>
+                    <li class="col-12 col-sm-12">Operates a fluorescence microscope (Nikon Eclipse Ti) along with a confocal lens in order to capture kymographs of mitochondria movement along microtubules</li>
+                    <li class="col-12 col-sm-12">Generated and executed experiments with rigor and reproducibility</li>
+                    <li class="col-12 col-sm-12">Analyzed, quantified, and presented data in order to effectively explain experimental results to individuals both within and outside of the scientific community</li>
+                </ul>
+            </article>
+            <article class="col-12 col-sm-9 col-lg-10 image_and_link">
+                <img class="col-12 col-sm-12 col-lg-6" src="Model-of-mitochondrial-movement-driven-by-kinesin-along-a-microtubule.png" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <a href="http://rogerslab.unc.edu/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-1" target="blank">Dr. Stephen Rogers' Lab</a>
+                <a href="https://www.microscope.healthcare.nikon.com/products/inverted-microscopes/eclipse-ti2-series" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-1 mb-3" target="blank">Nikon Eclipse Ti2 Series</a>
+            </article>
+
             <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Organic Chemistry II Peer Mentor</h4>
                 <h5 class="col-12 col-sm-12 e-co">UNC Chapel Hill Chemistry Department</h5>
