--- a/printing.html
+++ b/printing.html
@@ -55,63 +55,83 @@
     <section class="row experience">
         <h2 class="col-12 col-sm-12 section-titles">Experience</h2>
 <!----> <section class="col-12 col-sm-12 group">
-            <article class="col-12 col-sm-12 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Volunteer for COVID-19 Testing at UNC-CH</h4>
-                <h5 class="col-12 col-sm-12 e-co">Carolina Covid Student Service Corps</h5>
-                <p class="col-12 col-sm-12 e-time">August 2021 - Present</p>
+
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
+                <h4 class="col-12 col-sm-12 e-titles">Undergraduate Researcher</h4>
+                <h5 class="col-12 col-sm-12 e-co">Dr. Stephen Rogers' Lab - UNC Chapel Hill Biology Department</h5>
+                <p class="col-12 col-sm-12 e-time"><i>January 2022 - Present</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Serves the students, faculty, and staff at UNC Chapel Hill as a COVID-19 tester in order to keep the university open during the COVID-19 pandemic</li>
-                    <li class="col-12 col-sm-12">Communicates with respect to a diverse population of individuals needing COVID-19 testing in order to ensure a valuable and helpful experience</li>
-                    <li class="col-12 col-sm-12">Behaves as a leader in the health field by understanding how different cultures, values, and morals impact behavior and health care decisions</li>
-                    <li class="col-12 col-sm-12">Collaborates with other students and staff to achieve the goals of the organization by recognizing potential communication barriers and areas that need improvement</li>
-                    <li class="col-12 col-sm-12">Serves as a valuable resource for individuals testing for COVID-19 by staying up-to-date on current safe practices regarding testing and the pandemic</li>
+                    <li class="col-12 col-sm-12">Reads and critiques published scientific literature regarding the effects of various drug treatments on acetylated and de-acetylated microtubules, assessing the interactions of mitochondria with dynamic instability in <i>D. melanogaster</i></li>
+                    <li class="col-12 col-sm-12">Generated next-step hypotheses and means to test those hypotheses from information gathered from previously conducted experiments</li>
+                    <li class="col-12 col-sm-12">Operates a fluorescence microscope (Nikon Eclipse Ti) along with a confocal lens in order to capture kymographs of mitochondria movement along microtubules</li>
+                    <li class="col-12 col-sm-12">Generated and executed experiments with rigor and reproducibility</li>
+                    <li class="col-12 col-sm-12">Analyzed, quantified, and presented data in order to effectively explain experimental results to individuals both within and outside of the scientific community</li>
                 </ul>
             </article>
-            <article class="col-12 col-sm-12 e-about">
+
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Organic Chemistry II Peer Mentor</h4>
                 <h5 class="col-12 col-sm-12 e-co">UNC Chapel Hill Chemistry Department</h5>
-                <p class="col-12 col-sm-12 e-time">August 2021 - Present</p>
+                <p class="col-12 col-sm-12 e-time"><i>August 2021 - Present</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Generates study aids and supplemental worksheets for students</li>
+                    <li class="col-12 col-sm-12">Generates study aids and supplemental worksheets for students enrolled in the second course of organic chemistry at UNC Chapel Hill</li>
                     <li class="col-12 col-sm-12">Provides aid in terms of learning strategies, concept review, upper-level thinking to students in a diverse classroom environment</li>
-                    <li class="col-12 col-sm-12">Collaborates with the peer mentor team to improve the understanding of important organic chemistry concepts among students</li>
+                    <li class="col-12 col-sm-12">Collaborates with the peer mentor team and the instructor to improve the understanding of important organic chemistry concepts among students</li>
                     <li class="col-12 col-sm-12">Develops problem-solving skills in order to maximize potential as a resource for students</li>
                 </ul>
             </article>
-            <article class="col-12 col-sm-12 e-about">
+
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
+                <h4 class="col-12 col-sm-12 e-titles">Volunteer for COVID-19 Testing</h4>
+                <h5 class="col-12 col-sm-12 e-co">Carolina COVID-19 Student Services Corps</h5>
+                <p class="col-12 col-sm-12 e-time"><i>August 2021 - Present</i></p>
+                <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
+                <ul clas="col-12 col-sm-12">
+                    <li class="col-12 col-sm-12">Serves the students, faculty, and staff at UNC Chapel Hill in order to keep the university open during the course of the COVID-19 pandemic</li>
+                    <li class="col-12 col-sm-12">Respectfully communicates with a diverse population of individuals in order to ensure a valuable and helpful experience</li>
+                    <li class="col-12 col-sm-12">Demonstrates understanding of how cultures, values, and morals impact behavior and health care decisions</li>
+                    <li class="col-12 col-sm-12">Acts to remove potential communication barriers between volunteers and the public, acting to further the mission of the organization</li>
+                    <li class="col-12 col-sm-12">Remains a valuable resource for individuals testing for COVID-19 by staying up-to-date on current safe practices regarding testing and the pandemic</li>
+                    <li class="col-12 col-sm-12">Minimizing the spread of COVID-19 by persevering as a volunteer through increased rates of transmission with Omicron as well as the rise of the Delta variant</li>
+                </ul>
+            </article>
+
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Photographer</h4>
                 <h5 class="col-12 col-sm-12 e-co">Stephen Wenzel Photography</h5>
-                <p class="col-12 col-sm-12 e-time">March 2016 - Present</p>
+                <p class="col-12 col-sm-12 e-time"><i>Mar 2016 - Present</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
-                <ul class="col-12 col-sm-12">
+                <ul clas="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Manages the production and editing of images using Adobe Suite</li>
                     <li class="col-12 col-sm-12">Communicates with clients to efficiently and creatively portray them in contrast with their surroundings</li>
                     <li class="col-12 col-sm-12">Develops knowledge regarding physics of the camera body and equipment used to capture images in differing environments</li>
-                    <li class="col-12 col-sm-12">Generates an exciting, user-friendly customer experience both online and during the session</li>
+                    <li class="col-12 col-sm-12">Generates a user-friendly and exciting customer experience both online and during the session</li>
                     <li class="col-12 col-sm-12">Organizes a business plan that favors the client's needs and generates income for the business</li>
-                    <li class="col-12 col-sm-12">Donates a large sum of profits to a local nonprofit, 501(c)(3), organization</li>
+                    <li class="col-12 col-sm-12">Donates 15 percent of profits to a local nonprofit, 501(c)(3), organization</li>
                     <li class="col-12 col-sm-12">Serves over 50 clients across multiple counties in North Carolina</li>
                 </ul>
             </article>
-            <article class="col-12 col-sm-12 e-about">
+
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Undergraduate Research Assistant</h4>
-                <h5 class="col-12 col-sm-12 e-co">Rogers Lab and Slep Lab</h5>
+                <h5 class="col-12 col-sm-12 e-co">Rogers Lab, Slep Lab - UNC Chapel Hill Department of Biology</h5>
                 <h5 class="col-12 col-sm-12 e-co">"Investigation of the Comparative Effects of Intralumenal Microtubule Acetylation on Drosophila S2 cells When Treated with Cytochalasin D"​</h5>
-                <p class="col-12 col-sm-12 e-time">August 2021 - December 2021</p>
+                <p class="col-12 col-sm-12 e-time"><i>August 2021 - December 2021</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul clas="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Read and critiqued published scientific literature in order to accurately gather information relevant to the experiments at hand</li>
                     <li class="col-12 col-sm-12">Generated next-step hypotheses and means to test those hypotheses from information gathered from previously conducted experiments</li>
                     <li class="col-12 col-sm-12">Generated and executed experiments with rigor and reproducibility</li>
-                    <li class="col-12 col-sm-12">Analyzed quantities, and presented data in order to effectively explain experimental results to individuals both within and outside of the scientific community</li>
+                    <li class="col-12 col-sm-12">Analyzed, quantified, and presented data in order to effectively explain experimental results to individuals both within and outside of the scientific community</li>
                 </ul>
             </article>
-            <article class="col-12 col-sm-12 e-about">
+
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Medical and Online Assistant</h4>
                 <h5 class="col-12 col-sm-12 e-co">Western Carolina Ear, Nose and Throat</h5>
-                <p class="col-12 col-sm-12 e-time">Summer of 2018, 2019, 2021</p>
+                <p class="col-12 col-sm-12 e-time"><i>Summers of 2018, 2019, & 2021</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul clas="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Managed the layout of website content for optimal user experience using HTML and CSS through the Wix website builder</li>
@@ -119,21 +139,24 @@
                     <li class="col-12 col-sm-12">Shadowed otolaryngologists in order to learn about medical and surgical treatment of hearing loss, ear infections, balance disorders, tinnitus, nerve pain, and facial and cranial nerve disorders</li>
                 </ul>
             </article>
-            <article class="col-12 col-sm-12 e-about">
+
+            <!--Added extra margin and padding so that it can go to the next page-->
+            <article class="mt-5 pt-5 col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Volunteer Photographer</h4>
                 <h5 class="col-12 col-sm-12 e-co">Folkmoot International Dance Festival</h5>
-                <p class="col-12 col-sm-12 e-time">Summer of 2018, 2019, 2021</p>
+                <p class="col-12 col-sm-12 e-time"><i>Summers of 2018 - 2021</i></p>
                 <p class="col-12 col-sm-12 e-location">Waynesville, North Carolina</p>
                 <ul clas="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Captured photos at all performances and events throughout the annual summer folk dance festival</li>
-                    <li class="col-12 col-sm-12">Captured over 3000 images each year, effectively editing 100 photos each year through Adobe Lightroom and Photoshop for the client’s usage</li>
+                    <li class="col-12 col-sm-12">Captured over 3000 images each year, effectively editing over 400 photos each year through Adobe Lightroom and Photoshop for the client’s usage</li>
                     <li class="col-12 col-sm-12">Publicized and promoted festival performances and events through Instagram and Facebook social platforms</li>
                 </ul>
             </article>
-            <article class="col-12 col-sm-12 e-about">
+
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Undergraduate Research Assistant</h4>
                 <h5 class="col-12 col-sm-12 e-co">UNC Adams School of Dentistry</h5>
-                <p class="col-12 col-sm-12 e-time">Summer 2020</p>
+                <p class="col-12 col-sm-12 e-time"><i>Summer 2020</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul clas="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Progressed towards a common definition of the word “competence” for all health-related professions to improve the applicant review process</li>
@@ -168,22 +191,38 @@
         <h2 class="col-12 col-sm-12 section-titles">Skills</h2>
         <section class="col-12 col-sm-12 group">
             <article class="col-12 col-sm-12 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Research-Related Skills</h4>
-                    <p class="col-12 col-sm-12">Confocal Lenses - Biological Photography & Videography</p>
-                    <p class="col-12 col-sm-12">Column, Gas, Size Exclusion, Thin-Layer, and High Performance Liquid (HPL) Chromoatography</p>
-                    <p class="col-12 col-sm-12">Fiji Image Processor</p>
-                    <p class="col-12 col-sm-12">NMR Spectrometry</p>
-                    <p class="col-12 col-sm-12">UV-Vis Spectrometry</p>
-                    <p class="col-12 col-sm-12">Solvent-Solvent Extraction</p>
-                    <p class="col-12 col-sm-12">Writing for Scientific Projects</p>
-                <h4 class="col-12 col-sm-12 e-titles pt-4">Other Skills</h4>
-                    <p class="col-12 col-sm-12">HTML5, CSS3 - Front-End Web Design</p>
-                    <p class="col-12 col-sm-12">Portrait Photography</p>
-                    <p class="col-12 col-sm-12">Adobe Suite: <i>Photoshop, Lightroom</i></p>
+                <p class="col-12 col-sm-12">Adobe Suite: <i>Photoshop, Lightroom</i></p>
+                <p class="col-12 col-sm-12">Buffer Creation</p>
+                <p class="col-12 col-sm-12">Confocal Lenses - Cellular Photography & Videography</p>
+                <p class="col-12 col-sm-12">Fiji Image Processor</p>
+                <p class="col-12 col-sm-12">Fluorescence Microscopy (Nikon Eclipse Series)</p>
+                <p class="col-12 col-sm-12">High Performance Liquid (HPL) Chromatography</p>
+                <p class="col-12 col-sm-12">HTML5, CSS3 - Front-End Web Design</p>
+                <p class="col-12 col-sm-12">NMR Spectrometry</p>
+                <p class="col-12 col-sm-12">R for Data Science</p>
+                <p class="col-12 col-sm-12">Solvent-Solvent Extractions</p>
+                <p class="col-12 col-sm-12">UV-Vis Spectrometry</p>
+                <p class="col-12 col-sm-12">Writing for Scientific Projects</p>
             </article>
         </section>
     </section>
 </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <!-- Optional JavaScript -->
