--- a/skills.html
+++ b/skills.html
@@ -59,23 +59,25 @@
     <main class="row">
         <section class="col-12 col-sm-12 experience">
             <article class="col-12 col-sm-12 col-lg-10 e-about">
+                <h4 class="col-12 col-sm-12 e-titles">Skills</h4>
+                <p class="col-12 col-sm-12">Adobe Suite: <i>Photoshop, Lightroom</i></p>
+                <p class="col-12 col-sm-12">Buffer Creation</p>
+                <p class="col-12 col-sm-12">Confocal Lenses - Cellular Photography & Videography</p>
+                <p class="col-12 col-sm-12">Fiji Image Processor</p>
+                <p class="col-12 col-sm-12">Fluorescence Microscopy (Nikon Eclipse Series)</p>
+                <p class="col-12 col-sm-12">High Performance Liquid (HPL) Chromatography</p>
+                <p class="col-12 col-sm-12">HTML5, CSS3 - Front-End Web Design</p>
+                <p class="col-12 col-sm-12">NMR Spectrometry</p>
+                <p class="col-12 col-sm-12">R for Data Science</p>
+                <p class="col-12 col-sm-12">Solvent-Solvent Extractions</p>
+                <p class="col-12 col-sm-12">UV-Vis Spectrometry</p>
+                <p class="col-12 col-sm-12">Writing for Scientific Projects</p>
+            </article>
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Certifications</h4>
                 <h5 class="col-12 col-sm-12 e-co">Adult and Pediatric First Aid/CPR/AED Certification</h5>
                 <p class="col-12 col-sm-12 e-time"><i>American Red Cross</i></p>
                 <p class="col-12 col-sm-12 e-location">Exp. 2023</p>
-            </article>
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Skills</h4>
-                <p class="col-12 col-sm-12 e-location">Confocal Lenses - Biological Photography & Videography</p>
-                <p class="col-12 col-sm-12 e-location">Fiji Image Processor</p>
-                <p class="col-12 col-sm-12 e-location">NMR Spectrometry</p>
-                <p class="col-12 col-sm-12 e-location">UV-Vis Spectrometry</p>
-                <p class="col-12 col-sm-12 e-location">Solvent-Solvent Extractions</p>
-                <p class="col-12 col-sm-12 e-location">Column, Gas, Size-Exclusion, Thin-Layer, and High Performance Liquid (HPL) Chromatography</p>
-                <p class="col-12 col-sm-12 e-location">Writing for Scientific Projects</p>
-                <p class="col-12 col-sm-12 e-location">HTML5, CSS3 - Front-End Web Design</p>
-                <p class="col-12 col-sm-12 e-location">DSLRPortrait Photography</p>
-                <p class="col-12 col-sm-12 e-location">Adobe Suite: <i>Photoshop, Lightroom</i></p>
             </article>
         </section>
     </main>
