--- a/experiences.html
+++ b/experiences.html
@@ -66,10 +66,10 @@
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul clas="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Reads and critiques published scientific literature regarding the effects of various drug treatments on acetylated and de-acetylated microtubules, assessing the interactions of mitochondria with dynamic instability in <i>D. melanogaster</i></li>
-                    <li class="col-12 col-sm-12">Generated next-step hypotheses and means to test those hypotheses from information gathered from previously conducted experiments</li>
+                    <li class="col-12 col-sm-12">Generates next-step hypotheses and means to test those hypotheses from information gathered from previously conducted experiments</li>
                     <li class="col-12 col-sm-12">Operates a fluorescence microscope (Nikon Eclipse Ti) along with a confocal lens in order to capture kymographs of mitochondria movement along microtubules</li>
-                    <li class="col-12 col-sm-12">Generated and executed experiments with rigor and reproducibility</li>
-                    <li class="col-12 col-sm-12">Analyzed, quantified, and presented data in order to effectively explain experimental results to individuals both within and outside of the scientific community</li>
+                    <li class="col-12 col-sm-12">Generates and executes experiments with rigor and reproducibility</li>
+                    <li class="col-12 col-sm-12">Analyzes, quantifies, and presents data in order to effectively explain experimental results to individuals both within and outside of the scientific community</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
