Julie's advice - updated

--- a/experiences.html
+++ b/experiences.html
@@ -65,15 +65,16 @@
                 <p class="col-12 col-sm-12 e-time"><i>January 2022 - Present</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Reads and critiques published scientific literature regarding the effects of various drug treatments on acetylated and de-acetylated microtubules, assessing the interactions of mitochondria with dynamic instability in <i>D. melanogaster</i></li>
-                    <li class="col-12 col-sm-12">Generates next-step hypotheses and means to test those hypotheses from information gathered from previously conducted experiments</li>
-                    <li class="col-12 col-sm-12">Operates a fluorescence microscope (Nikon Eclipse Ti) along with a confocal lens in order to capture kymographs of mitochondria movement along microtubules</li>
+                    <li class="col-12 col-sm-12">Analyzes and critiques published scientific literature pertaining to the effects of drug treatments on acetylated and de-acetylated microtubules in <i>D. melanogaster</i></li>
+                    <li class="col-12 col-sm-12">Generates next-step hypotheses and means to test those hypotheses from information gathered by previously conducted experiments</li>
+                    <li class="col-12 col-sm-12">Operates a fluorescence microscope (Nikon Eclipse Ti) along with a confocal lens in order to capture kymographs of mitochondria movement along microtubules, tracking displacement and analyzing for velocity and acceleration given various drug treatments</li>
                     <li class="col-12 col-sm-12">Generates and executes experiments with rigor and reproducibility</li>
                     <li class="col-12 col-sm-12">Analyzes, quantifies, and presents data in order to effectively explain experimental results to individuals both within and outside of the scientific community</li>
+                    <li class="col-12 col-sm-12">Programs in R, as well as HTML and CSS, in order to create meaningful graphs and figures</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img class="col-12 col-sm-12 col-lg-6" src="Model-of-mitochondrial-movement-driven-by-kinesin-along-a-microtubule.png" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <iframe id="kinesin" class="col-12 col-sm-12 col-lg-6" src="https://www.youtube-nocookie.com/embed/y-uuk4Pr2i8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Professionally animated video of a kinesin protein walking, carrying a vesicle towards the plus end of a microtubule."></iframe>
                 <a href="http://rogerslab.unc.edu/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-1" target="blank">Dr. Stephen Rogers' Lab</a>
                 <a href="https://www.microscope.healthcare.nikon.com/products/inverted-microscopes/eclipse-ti2-series" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-1 mb-3" target="blank">Nikon Eclipse Ti2 Series</a>
             </article>
@@ -85,9 +86,9 @@
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul clas="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Generates study aids and supplemental worksheets for students enrolled in the second course of organic chemistry at UNC Chapel Hill</li>
-                    <li class="col-12 col-sm-12">Provides aid in terms of learning strategies, concept review, upper-level thinking to students in a diverse classroom environment</li>
-                    <li class="col-12 col-sm-12">Collaborates with the peer mentor team and the instructor to improve the understanding of important organic chemistry concepts among students</li>
-                    <li class="col-12 col-sm-12">Develops problem-solving skills in order to maximize potential as a resource for students</li>
+                    <li class="col-12 col-sm-12">Provides aid through learning strategies, concept review, upper-level thinking questions for students in a diverse classroom environment</li>
+                    <li class="col-12 col-sm-12">Collaborates with a peer mentor team and the instructor to improve the understanding of important organic chemistry concepts among students</li>
+                    <li class="col-12 col-sm-12">Develops problem-solving skills in order to maximize potential as a peer mentor</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
@@ -106,12 +107,12 @@
                     <li class="col-12 col-sm-12">Respectfully communicates with a diverse population of individuals in order to ensure a valuable and helpful experience</li>
                     <li class="col-12 col-sm-12">Demonstrates understanding of how cultures, values, and morals impact behavior and health care decisions</li>
                     <li class="col-12 col-sm-12">Acts to remove potential communication barriers between volunteers and the public, acting to further the mission of the organization</li>
-                    <li class="col-12 col-sm-12">Remains a valuable resource for individuals testing for COVID-19 by staying up-to-date on current safe practices regarding testing and the pandemic</li>
-                    <li class="col-12 col-sm-12">Minimizing the spread of COVID-19 by persevering as a volunteer through increased rates of transmission with Omicron as well as the rise of the Delta variant</li>
+                    <li class="col-12 col-sm-12">Serves as a valuable resource for individuals testing for COVID-19 by staying up-to-date on current safe practices regarding testing and the pandemic</li>
+                    <li class="col-12 col-sm-12">Volunteers in order to help an organization aiming to minimize the spread of the variants of COVID-19</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img id="cssc_pic" class="col-12 col-sm-12 col-lg-6" src="CarolinaCSSC1-768x554.png" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <img id="cssc_pic" class="col-12 col-sm-12 col-lg-6" href="https://ipep.unc.edu/students/carolina-covid-19-student-services-corps-carolina-cssc/" src="CarolinaCSSC1-768x554.png" onMouseDown="popupMsg('Unable to access image functionalities')">
                 <a href="https://ipep.unc.edu/students/carolina-covid-19-student-services-corps-carolina-cssc/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Carolina COVID-19 Student Services Corps</a>
             </article>
 
@@ -121,7 +122,7 @@
                 <p class="col-12 col-sm-12 e-time"><i>Mar 2016 - Present</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Manages the production and editing of images using Adobe Suite</li>
+                    <li class="col-12 col-sm-12">Manages the production and editing of images using Adobe Suite: Photoshop and Lightroom</li>
                     <li class="col-12 col-sm-12">Communicates with clients to efficiently and creatively portray them in contrast with their surroundings</li>
                     <li class="col-12 col-sm-12">Develops knowledge regarding physics of the camera body and equipment used to capture images in differing environments</li>
                     <li class="col-12 col-sm-12">Generates a user-friendly and exciting customer experience both online and during the session</li>
@@ -131,7 +132,7 @@
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img class="col-12 col-sm-12 col-lg-6" src="https://drscdn.500px.org/photo/1040560161/m%3D900/v2?sig=a7e595a0b3e694284cf33a8a187e9c2f9be082e981950ef142fe741c8459becc" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <img href="https://stephenawenzel.github.io/stephenwenzelphotography/" class="col-12 col-sm-12 col-lg-6" src="https://drscdn.500px.org/photo/1040560161/m%3D900/v2?sig=a7e595a0b3e694284cf33a8a187e9c2f9be082e981950ef142fe741c8459becc" onMouseDown="popupMsg('Unable to access image functionalities')">
                 <a href="https://stephenawenzel.github.io/stephenwenzelphotography/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Stephen Wenzel Photography</a>
             </article>
 
@@ -161,7 +162,7 @@
                 <p class="col-12 col-sm-12 e-time"><i>Summers of 2018, 2019, & 2021</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Managed the layout of website content for optimal user experience using HTML and CSS through the Wix website builder</li>
+                    <li class="col-12 col-sm-12">Managed the layout of website content for optimal user experience using HTML and CSS, as well as the Wix website builder</li>
                     <li class="col-12 col-sm-12">Created content via photography, videography, blog posts, and website content in order to maximize public outreach</li>
                     <li class="col-12 col-sm-12">Shadowed otolaryngologists in order to learn about medical and surgical treatment of hearing loss, ear infections, balance disorders, tinnitus, nerve pain, and facial and cranial nerve disorders</li>
                 </ul>
@@ -178,8 +179,8 @@
                 <p class="col-12 col-sm-12 e-location">Waynesville, North Carolina</p>
                 <ul clas="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Captured photos at all performances and events throughout the annual summer folk dance festival</li>
-                    <li class="col-12 col-sm-12">Captured over 3000 images each year, effectively editing over 400 photos each year through Adobe Lightroom and Photoshop for the client’s usage</li>
-                    <li class="col-12 col-sm-12">Publicized and promoted festival performances and events through Instagram and Facebook social platforms</li>
+                    <li class="col-12 col-sm-12">Captured over 2000 images each year, creatively editing 300 photos of them through Adobe Lightroom and Photoshop for the client’s usage</li>
+                    <li class="col-12 col-sm-12">Publicized and promoted festival performances and events through Instagram and Facebook social platforms in order to help the client with social media outreach</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
