--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <nav class="col-12 col-sm-12 collapse navbar-collapse" id="sawnavbar">
                 <ul class="col-12 col-sm-12 navbar-nav">
-                    <li class="col-12 col-md-2 nav-item active">
+                    <li class="col-12 col-md-2 nav-item active m-0">
                         <a class="nav-link" href="index.html">Home</a> <!--DON"T USE THE BACKSLASH AT THE FRONT!-->
                     </li>
                     <li class="col-12 col-md-2 nav-item">
