--- a/printing.html
+++ b/printing.html
@@ -33,9 +33,10 @@
 <main class="container-fluid">
     <section class="row header-content">
         <h1 class="col-12 col-sm-12 text-center">Stephen Wenzel</h1>
-        <a class="col-3 col-sm-3 text-center" id="email" href="mailto:stephenwenzel24@yahoo.com">stephenwenzel24@yahoo.com</a>
-        <p class="col-6 col-sm-6 text-center" id="location">Chapel Hill, North Carolina</p>
+        <a class="col-6 col-sm-3 text-center" id="location">Chapel Hill, North Carolina</a>
+        <a class="col-3 col-sm-6 text-center" id="email" href="mailto:sawenzel@live.unc.edu">sawenzel@live.unc.edu</a>
         <a class="col-3 col-sm-3 text-center" id="phone" href="tel:8287344555">828-734-4555</a>
+        <a class="col-12 col-sm-12 text-center" id="website_banner" href="https://stephenawenzel.github.io/resume/"><span>Link to view my interactive resume.</span></a>
     </section>
     <section class="row experience">
         <h2 class="col-12 col-sm-12 section-titles">Education</h2>
@@ -141,7 +142,7 @@
             </article>
 
             <!--Added extra margin and padding so that it can go to the next page-->
-            <article class="mt-5 pt-5 col-12 col-sm-12 col-lg-10 e-about">
+            <article class="mt-5 pt-2 col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Volunteer Photographer</h4>
                 <h5 class="col-12 col-sm-12 e-co">Folkmoot International Dance Festival</h5>
                 <p class="col-12 col-sm-12 e-time"><i>Summers of 2018 - 2021</i></p>
@@ -165,8 +166,8 @@
             </article>
         </section>
     </section>
-    <section class="row experience mt-5">
-        <h2 class="col-12 col-sm-12 section-titles mt-1">Activities</h2>
+    <section class="row experience">
+        <h2 class="col-12 col-sm-12 section-titles">Activities</h2>
         <section class="col-12 col-sm-12 group act-border">
             <article class="col-12 col-sm-12 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">American Red Cross Club of UNC-CH</h4>
@@ -207,22 +208,6 @@
         </section>
     </section>
 </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     <!-- Optional JavaScript -->
